# Authenticator

./: .buildconfig  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  ISSUE_TEMPLATE.md  Makefile.am  README.md  authenticator.py.in  autogen.sh  circle.yml  com.github.bilelmoussaoui.Authenticator.json  configure.ac  createtable.py  database.db  gnome-authenticator.in  gnome-authenticator.py.in  gnome-twofactorauth.in  installation.sql  meson.build  meson_options.txt  meson_post_install.sh  twofactorauth.in
.github/: ISSUE_TEMPLATE.md
Authenticator/: __init__.py  application.py  const.py  utils.py
Authenticator/models/: __init__.py  account.py  accounts_manager.py  backup.py  clipboard.py  code.py  database.py  gnupg.py  keyring.py  logger.py  otp.py  qr_reader.py  screenshot.py  settings.py
Authenticator/widgets/: __init__.py  about.py  about.py.in  account_row.py  accounts.py  accounts_grid.py  accounts_list.py  accounts_window.py  actions_bar.py  add_account.py  application_row.py  applications_list.py  change_password.py  confirmation.py  headerbar.py  inapp_notification.py  login_window.py  no_account_window.py  password_label.py  search_bar.py  settings.py  shortcuts.py  utils.py  window.py
Authenticator/widgets/accounts/: __init__.py  add.py  edit.py  list.py  row.py
Authenticator/widgets/backup/: __init__.py  gnupg.py
TwoFactorAuth/: Makefile.am  __init__.py  application.py  utils.py
TwoFactorAuth/interfaces/: account_observrable.py  application_observrable.py  observable.py
TwoFactorAuth/models/: Makefile.am  account.py  authenticator.py  code.py  database.py  observer.py  provider.py  qr_reader.py  settings.py
TwoFactorAuth/ui/: Makefile.am  add_provider.py  confirmation.py  icon_finder.py  listrow.py  logo_provider.py  window.py
TwoFactorAuth/widgets/: Makefile.am  account_row.py  accounts_grid.py  accounts_list.py  accounts_window.py  add_account.py  add_application.py  add_authenticator.py  application_row.py  applications_list.py  authenticator_logo.py  change_password.py  confirmation.py  headerbar.py  icon_finder.py  inapp_notification.py  listrow.py  login_window.py  no_account_window.py  search_bar.py  settings.py  window.py
builddir/: .ninja_deps  .ninja_log  build.ninja  gnome-authenticator
builddir/data/: org.gnome.Authenticator.appdata.xml
builddir/meson-logs/: install-log.txt  meson-log.txt
builddir/po/: ar.gmo  da.gmo  fr.gmo  hu.gmo  id.gmo  nl.gmo  sv.gmo
data/: Makefile.am  about.glade  about.ui  application_row.ui  applications.ui  change_password.ui  com.github.bilelmoussaoui.Authenticator-post3.20.css  com.github.bilelmoussaoui.Authenticator-pre3.20.css  com.github.bilelmoussaoui.Authenticator.appdata.xml.in  com.github.bilelmoussaoui.Authenticator.desktop.in  com.github.bilelmoussaoui.Authenticator.gresource.xml  com.github.bilelmoussaoui.Authenticator.gschema.xml  data.json  gnome-twofactorauth-post3.20.css  gnome-twofactorauth-pre3.20.css  gnome-twofactorauth.appdata.xml  gnome-twofactorauth.appdata.xml.in  gnome-twofactorauth.desktop.in  gnome-twofactorauth.gresource.xml  login.ui  menu.glade  menu.ui  meson.build  org.gnome.Authenticator-pre3.20.css  org.gnome.Authenticator.appdata.xml.in  org.gnome.Authenticator.desktop.in  org.gnome.Authenticator.gresource.xml  org.gnome.Authenticator.gschema.xml  org.gnome.TwoFactorAuth.gschema.xml  settings.ui  shortcuts.glade  shortcuts.ui  style.css  two-factor.appdata.xml  two-factor.desktop.in  twofactorauth.appdata.xml  twofactorauth.desktop.in
data/applications/: Makefile.am  meson.build
data/applications/data/: Makefile.am
data/applications/images/: Makefile.am
data/icons/: meson.build
data/logos/: Makefile.am
flatpak/: org.gnome.Authenticator.json  org.gnome.TwoFactorAuth.json
po/: Authenticator.pot  LINGUAS  POTFILES.in  TwoFactorAuth.pot  ar.po  da.po  de.po  es.po  fr.po  fr_BE.po  hu.po  id.po  meson.build  nb_NO.po  nl.po  nl_BE.po  org.gnome.Authenticator.pot  pl.po  sr.po  sr@latin.po  sr_Latn.po  sv.po
schemas/: Makefile.am  org.gnome.TwoFactorAuth.gschema.xml
search-provider/: authenticator-search-provider.ini  authenticator-search-provider.py.in  com.github.bilelmoussaoui.Authenticator.SearchProvider.service.in  meson.build
src/: Makefile.am  two-factor.in  twofactorauth.in
src/twofactor/: application.py
src/twofactor/models/: provider.py
src/twofactor/ui/: add_provider.py  confirmation.py  logo_provider.py  window.py
src/twofactorauth/: Makefile.am  application.py
src/twofactorauth/models/: Makefile.am  code.py  provider.py
src/twofactorauth/ui/: Makefile.am  add_provider.py  listrow.py  logo_provider.py  window.py
tools/: autopep8.sh  build.sh  update_pot.sh  yaml2json.py  zbar_configure.patch
