appdir = $(pythondir)/TwoFactorAuth/widgets

app_PYTHON = \
	add_account.py \
	confirmation.py \
	account_row.py \
	accounts_list.py \
	accounts_window.py \
	login_window.py \
	inapp_notification.py \
	headerbar.py \
	applications_list.py \
	application_row.py \
	change_password.py \
	no_account_window.py \
	search_bar.py \
	settings.py \
	window.py
