yamldir = $(pkgdatadir)/applications/data
yaml_DATA = backup.yml \
    		banking.yml \
			cloud.yml \
			communication.yml \
			cryptocurrencies.yml \
			developer.yml \
			domains.yml \
			education.yml \
			email.yml \
			entertainment.yml \
			finance.yml \
			food.yml \
			gaming.yml \
			health.yml \
			hosting.yml \
			investing.yml \
			other.yml \
			payments.yml \
			remote.yml \
			retail.yml \
			security.yml \
			social.yml \
			transport.yml \
			utilities.yml
