imagesdir = $(pkgdatadir)/applications/images
images_DATA = amazon.png \
        dropbox.png \
        facebook.png \
        flickr.png \
        foursquare.png \
        gitter.png \
        google.png \
        microsoft.png \
        owncloud.png \
        pocket.png \
        reddit.png \
        slack.png \
        twitter.png \
        yahoo.png
